--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "l",
     "require": {
         "php": ">=7.3",
-        "guzzlehttp/guzzle": "7.4",
+        "guzzlehttp/guzzle": "~6.3.0",
         "tightenco/collect": "5.*"
     },
     "license": "MIT",
