--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "l",
     "require": {
         "php": ">=7.3",
-        "guzzlehttp/guzzle": "~6.3.0",
-        "tightenco/collect": "~v5.2.31"
+        "guzzlehttp/guzzle": "~6.3",
+        "tightenco/collect": "~5.*"
     },
     "license": "MIT",
     "autoload": {
